components/minio/tenant-6.0.4/tenant/tenants/netobserv-loki/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    v1.min.io/tenant: oadp-backup
  name: minio
  namespace: openshift-adp
spec:
  host: oadp-backup-openshift-adp.apps.sno.shanehomelab.com
  port:
    targetPort: http-minio
  to:
    kind: Service
    name: minio
    weight: 100
  wildcardPolicy: None
